# LumenCore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
assets/env/: dusk.hdr  noon_factory.hdr  studio.hdr
assets/models/: README.md  sparky.mtl  sparky_albedo.avif  sparky_normal.avif  spot_texture.avif  yellow_buddy.mtl
bindings/: lumencore_module.cpp
cmake/: Dependencies.cmake  FetchOptiX.cmake  FetchPhysX.cmake  FetchStb.cmake
docker/: run.sh
docs/report/: 01-overview.md  02-rendering-equation.md  03-monte-carlo-path-tracing.md  04-materials-bsdf.md  05-nee-mis-hdri.md  06-volumes-media.md  07-optix-implementation.md  08-host-pipeline.md  09-physx-integration.md  10-python-api-demos.md  11-build-and-run.md  README.md  appendix-symbols.md
docs/report/figures/: fresnel-refract.avif  hdri-equirect.avif  hemisphere-rendering.avif  microfacet-roughness.avif  nee-mis.avif  optix-architecture.avif  path-tracing.avif  physx-render-loop.avif  volume-media.avif
examples/: cornell.cc  materials_ball.cc  outdoor_env.cc  yellow_buddy.cc
include/nrtx/: env_map.h  heic_writer.h  image_io.h  nrtx.h  physx_world.h
outputs/: beacon_loop.mkv  beer_off_vk_phase2c.avif  beer_on_vk_phase2c.avif  cornell.avif  cornell.heic  cornell_vk_denoise_off.avif  cornell_vk_denoise_on.avif  cornell_vk_phase1.avif  cornell_vk_phase2d.avif  fireplace.avif  fireplace.heic  flame_vk_phase2d.avif  ggx_studio.avif  ggx_studio.heic  ggx_vk_phase2a.avif  inst_vk_phase2d.avif  materials_ball.avif  materials_ball.heic  outdoor_env.avif  outdoor_env.heic  outdoor_vk_phase2b.avif  physx_collapse.avif  sparky.avif  sparky.heic  tex_vk_phase2b.avif  water_pool.avif  water_pool.heic  water_vk_phase2c.avif
outputs/beacon_loop/: frame_0000.avif  frame_0001.avif  frame_0002.avif  frame_0003.avif  frame_0004.avif  frame_0005.avif  frame_0006.avif  frame_0007.avif  frame_0008.avif  frame_0009.avif  frame_0010.avif  frame_0011.avif  frame_0012.avif  frame_0013.avif  frame_0014.avif  frame_0015.avif  frame_0016.avif  frame_0017.avif  frame_0018.avif  frame_0019.avif  frame_0020.avif  frame_0021.avif  frame_0022.avif  frame_0023.avif  frame_0024.avif  frame_0025.avif  frame_0026.avif  frame_0027.avif  frame_0028.avif  frame_0029.avif  frame_0030.avif  frame_0031.avif  frame_0032.avif  frame_0033.avif  frame_0034.avif  frame_0035.avif  frame_0036.avif  frame_0037.avif  frame_0038.avif  frame_0039.avif  (+80 more)
outputs/gallery/: assembly_hall.avif  assembly_hall.heic  dusk_observatory.avif  dusk_observatory.heic  showcase.avif  showcase.heic
outputs/gallery/compare/: beer_off.avif  beer_off.heic  beer_on.avif  beer_on.heic  denoiser_off.avif  denoiser_off.heic  denoiser_on.avif  denoiser_on.heic  flame_off.avif  flame_off.heic  flame_on.avif  flame_on.heic  nee_off.avif  nee_off.heic  nee_on.avif  nee_on.heic  normal_off.avif  normal_off.heic  normal_on.avif  normal_on.heic
outputs/physx_collapse/: frame_0000.avif  frame_0000.heic  frame_0001.avif  frame_0001.heic  frame_0002.avif  frame_0002.heic  frame_0003.avif  frame_0003.heic  frame_0004.avif  frame_0004.heic  frame_0005.avif  frame_0005.heic  frame_0006.avif  frame_0006.heic  frame_0007.avif  frame_0007.heic  frame_0008.avif  frame_0008.heic  frame_0009.avif  frame_0009.heic  frame_0010.avif  frame_0010.heic  frame_0011.avif  frame_0011.heic  frame_0012.avif  frame_0012.heic
python/: video_render.py
python/scenes/: assembly_hall.py  atelier.py  beacon_loop.py  cornell.py  dusk_observatory.py  fireplace.py  gallery_compare.py  ggx_studio.py  materials_ball.py  outdoor_env.py  physx_collapse.py  sparky.py  water_pool.py  yellow_buddy.py
scripts/: build.sh  fetch_physx.sh  gen_sparky.py  gen_studio_hdr.py  gen_water_surface.py  render_gallery.sh  setup_physx.sh
src/common/: LaunchParams.h  bsdf.h  sampling.h  vec.h
src/device/: shaders.cu
src/device/vulkan/: bindings.glsl  bsdf.glsl  common.glsl  flame.glsl  path_trace.rahit  path_trace.rchit  path_trace.rgen  path_trace.rmiss  path_trace_shadow.rmiss
src/host/: env_map.cpp  heic_writer.cpp  image_io.cpp  mesh.cpp  obj_loader.cpp  optix_denoise.cpp  physx_world.cpp  renderer.cpp  vulkan_renderer.cpp
